@@ -1,11 +1,14 @@
 import com.softwaremill.SbtSoftwareMillCommon.commonSmlBuildSettings
+import com.softwaremill.Publish.ossPublishSettings
 
-lazy val commonSettings = commonSmlBuildSettings ++ Seq(
-  organization := "com.softwaremill.effects",
-  scalaVersion := "3.2.1"
+lazy val commonSettings = commonSmlBuildSettings ++ ossPublishSettings ++ Seq(
+  organization := "com.softwaremill.ox",
+  scalaVersion := "3.2.2",
+  javaOptions += "--enable-preview --add-modules jdk.incubator.concurrent",
+  fork := true
 )
 
-val scalaTest = "org.scalatest" %% "scalatest" % "3.2.14" % Test
+val scalaTest = "org.scalatest" %% "scalatest" % "3.2.15" % Test
 val logback = "ch.qos.logback" % "logback-classic" % "1.4.5"
 
 lazy val rootProject = (project in file("."))
